@@ -2,7 +2,7 @@
  * #%L
  * Mule CoAP Connector
  * %%
- * Copyright (C) 2019 - 2022 (teslanet.nl) Rogier Cobben
+ * Copyright (C) 2019 - 2024 (teslanet.nl) Rogier Cobben
  * 
  * Contributors:
  *     (teslanet.nl) Rogier Cobben - initial creation
@@ -22,7 +22,9 @@
  */
 package nl.teslanet.mule.connectors.coap.test.client.properties;
 
-import nl.teslanet.mule.connectors.coap.api.CoapResponseAttributes;
+
+import nl.teslanet.mule.connectors.coap.api.attributes.CoapResponseAttributes;
+
 
 /**
  * Test inbound size1 property, integer value
@@ -37,7 +39,7 @@ public class OptSize1Inbound1Test extends AbstractInboundPropertyTestCase
      */
     private Integer getValue()
     {
-        return new Integer( 120 );
+        return Integer.valueOf( 120 );
     }
 
     /* (non-Javadoc)
@@ -79,6 +81,6 @@ public class OptSize1Inbound1Test extends AbstractInboundPropertyTestCase
     @Override
     protected Object fetchInboundProperty( CoapResponseAttributes attributes )
     {
-        return attributes.getOptions().getAcceptableRequestSize();
+        return attributes.getResponseOptions().getAcceptableRequestSize();
     }
 }
